adicionando funcoes editar/deletar

--- a/css/lista.css
+++ b/css/lista.css
@@ -48,6 +48,7 @@ h1 {
 }
 
 .tarefa {
+    width: 100%;
     display: flex;
     justify-content: center;
     border: 0.5px solid #eee;
@@ -55,10 +56,6 @@ h1 {
     background-color: cadetblue;
     margin-bottom: 0.75%;
     padding: 1.5% 0;
-}
-
-.tarefa > #statusTarefa {
-    
 }
 
 .tarefa > p {
@@ -77,8 +74,8 @@ h1 {
 }
 
 .icon {
-    width: 2em;
-    height: 2em;
+    width: 2rem;
+    height: 2rem;
     margin: 0 15%;
     filter: invert(1);
 }
